# esp32-c3-lvgl-study

./: .gitignore  README.md
project/main/: CMakeLists.txt  app_data.c  app_data.h  app_main.c
project/main/ui/: ui_boot_animate.c  ui_clockScreen.c  ui_main.c  ui_menu_setting.c  ui_menu_today.c  ui_setting_about.c  ui_setting_language.c  ui_setting_light.c  ui_setting_main.c
project/main/ui/fonts/: font_OPPOSans_20.c  font_OPPOSans_24.c
project/main/ui/imgs/: dial_0.c  logo.c
project/main/ui/imgs/image_setting/: about_icon.c  language_icon.c  light_icon.c  setting_icon.c
project/main/ui/layer_manage/: lv_example_image.h  lv_example_pub.h
